--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ footer {
   grid-area: footer;
   text-align: center;
   background: #222;
-  color: white;
+  color: rgb(126, 113, 113);
   padding: 1rem;
 }
 
@@ -77,7 +77,7 @@ footer {
 }
 
 .card {
-  background: white;
+  background: rgb(197, 187, 187);
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.30);
   padding: 1rem;
@@ -85,7 +85,7 @@ footer {
 }
 
 .card p {
-  color: rgb(4, 102, 22);
+  color: rgb(5, 58, 12);
 }
 
 .card img {
@@ -102,4 +102,71 @@ footer {
   border-radius: 5px;
   color: white;
   cursor: pointer;
+}
+
+/* ========== Menu hamburguesa ( Oculto en PC ) ===========*/
+.hamburguesa {
+  display: none;
+  background: none;
+  font-size: 2rem;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+/* ====== Responsividad móvil ====== */
+@media screen and (max-width: 768px) {
+  body {
+    grid-template-areas:
+      "header"
+      "main"
+      "footer";
+    grid-template-columns: 1fr;
+  }
+
+  aside {
+    display: none; /* Ocultamos menú lateral en móviles */
+  }
+
+  /* Menú oculto inicialmente */
+  nav {
+    display: flex;
+    flex-direction: column;
+    background: #222;
+    position: fixed;
+    top: 0;
+    left: -100%; /* escondido fuera de la pantalla */
+    width: 70%;
+    height: 100%;
+    padding-top: 60px;
+    transition: left 0.3s ease;
+    z-index: 1000;
+  }
+
+  nav button {
+    background: none;
+    border: none;
+    color: white;
+    padding: 1rem;
+    text-align: left;
+    width: 100%;
+    font-size: 1.1rem;
+    border-bottom: 1px solid #333;
+    cursor: pointer;
+  }
+
+  /* Botón hamburguesa visible */
+  .hamburger {
+    display: block;
+  }
+
+  /* Menú activo → entra desde la izquierda */
+  nav.activo {
+    left: 0;
+  }
+
+  /* Evitar que el contenido se desplace */
+  main {
+    padding: 1rem;
+  }
 }
