--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 /* Header superior */
 header {
   grid-area: header;
-  background: #222;
+  background: #e91e63;
   color: white;
   padding: 1rem;
   display: flex;
@@ -156,7 +156,7 @@ footer {
   }
 
   /* Botón hamburguesa visible */
-  .hamburger {
+  .hamburguesa {
     display: block;
   }
 
