--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 header {
   grid-area: header;
   background: #e91e63;
-  color: white;
+  color: rgb(15, 15, 15);
   padding: 1rem;
   display: flex;
   justify-content: space-between;
