--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ footer {
   text-align: center;
 }
 
+.card h3 {
+  margin-top: 0;
+}
+
 .card p {
   color: rgb(5, 58, 12);
 }
@@ -109,10 +113,10 @@ footer {
 }
 
 .card button {
-  background: #e91e63;
+  background: #3e7710d8;
   border: none;
   padding: 0.5rem 1rem;
-  margin-top: 0.5rem;
+  margin-top: 0.2rem;
   border-radius: 5px;
   color: white;
   cursor: pointer;
@@ -156,7 +160,7 @@ footer {
 }
 
 .login-personalizado button {
-  background: #08420d;
+  background: #3e7710d8;
   border: none;
   padding: 0.5rem 1rem;
   margin-top: 0.5rem;
@@ -169,10 +173,6 @@ footer {
   
   padding: 20px;
 }
-
-
-
-
 
 
 /* ====== Targetas Elegantes para Formularios ====== */
@@ -200,7 +200,7 @@ footer {
 
 /* ====== Botones Modernos ====== */
 .btn {
-  background: #e91e63;
+  background: #3e7710d8;
   color: white;
   border: none;
   padding: 10px;
@@ -217,7 +217,7 @@ footer {
 }
 
 .btn-cerrar-sesion {
-  background: #0f6d0f;
+  background: #3e7710d8;
   color: rgb(230, 218, 218);
   border: none;
   padding: 5px;
@@ -258,6 +258,78 @@ footer {
 
 .tabla tr:hover {
   background: #f5f5f5;
+}
+
+
+
+
+/* ====== Modal Asignación ====== */
+.modal {
+  display: none; /* oculto por defecto */
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.6);
+  justify-content: center;
+  align-items: center;
+  z-index: 2000;
+}
+
+.modal-contenido {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  max-width: 350px;
+  width: 90%;
+  text-align: center;
+  box-shadow: 0px 6px 12px rgba(0,0,0,0.3);
+}
+
+.modal-contenido h3 {
+  margin-bottom: 15px;
+}
+
+.modal-contenido select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+
+.modal-botones {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+
+.btn-asignar {
+  width: 70%;
+  background: #383535;
+  color: #e9f0e9;
+  font-size: 9px;
+  border-radius: 5px;
+  border: none;
+}
+.btn-detalle {
+  width: 75%;
+  background: #5d5f5bd8;
+  color: #e9f0e9;
+  font-size: 9px;
+  border-radius: 4px;
+  border: none;
+}
+.btn-cancelar {
+  background: #777;
+  color: white;
+  border: none;
+  padding: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.btn-cancelar:hover {
+  background: #9e1111;
 }
 
 
@@ -351,7 +423,7 @@ footer {
   }
 
 
-  /* ====== Modal Asignación ====== */
+  /* ====== Modal Asignación y Detalle ====== */
   .modal {
     display: none; /* oculto por defecto */
     position: fixed;
@@ -391,32 +463,55 @@ footer {
     gap: 10px;
   }
 
-  .btn-asignar {
-    width: 70%;
-    background: #383535;
-    color: #e9f0e9;
-    font-size: 9px;
-    border-radius: 5px;
-    border: none;
+  
+
+  #detalle-contenido {
+    text-align: center;
+    margin: 15px 0;
+    font-size: 15px;
+    line-height: 1.6;
   }
-  .btn-detalle {
-    width: 70%;
-    background: #383535;
+
+  
+
+  .btn-eliminar {
+    width: 75%;
+    background: #d32f2f;
     color: #e9f0e9;
     margin: 3px;
     font-size: 9px;
     border-radius: 5px;
     border: none;
   }
+  .btn-asignar {
+    width: 75%;
+    background: #3e7710d8;
+    color: #e9f0e9;
+    font-size: 9px;
+    border-radius: 4px;
+    border: none;
+  }
+  .btn-detalle {
+    width: 75%;
+    background: #5d5f5bd8;
+    color: #e9f0e9;
+    font-size: 9px;
+    border-radius: 4px;
+    border: none;
+  }
 
 
   .btn-cancelar {
-    background: #777;
+    background: #5d5f5bd8;
     color: white;
     border: none;
-    padding: 12px;
+    padding: 10px;
+    margin-top: 15px;
     border-radius: 8px;
     cursor: pointer;
+    font-size: 13px;
+    font-weight: bold;
+    transition: 0.3s;
   }
   .btn-cancelar:hover {
     background: #555;
